@@ -1,3 +1,11 @@
+2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b88
+
+	* Change: Gallery now also uses GeekLogs user language.
+		  Also Langpacks were adjust to fit.
+		  Note: Gallery supports more different Languages then GL, 
+			but GL has some different encodings.
+			So Gallery does not support all GL Languages.
+
 2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b87
 
 	* Change: remove doubled cvs id in setup/*
